--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,20 @@
   background: #eaeaea;
   border-radius: 6px;
 }
+
+.filter-input {
+  -webkit-appearance: none;
+  height: 5px;
+  background: #3333331a;
+  border-radius: 5px;
+}
+
+.filter-input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 24px;
+  width: 24px;
+  border-radius: 100%;
+  background: #952525;
+  cursor: ew-resize;
+  box-shadow: 0 0 2px 0 #555;
+}
